--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.34.0",
     "@clerk/nextjs": "^6.36.7",
     "clsx": "^2.1.1",
     "convex": "^1.31.4",
