--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.34.0",
-    "@clerk/nextjs": "^6.36.7",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.1",
-    "convex": "^1.31.4",
-    "convex-helpers": "^0.1.109",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
