--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "eslint",
     "sync-images": "node scripts/sync-r2-to-minio.js",
-    "sync-order-images": "node scripts/sync-order-images.js"
+    "sync-order-images": "node scripts/sync-order-images.js",
+    "fetch-order": "tsx scripts/fetch-order.ts",
+    "fetch-and-sync": "tsx scripts/fetch-and-sync-order.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.970.0",
@@ -18,9 +20,13 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "next": "16.1.1",
+    "openai": "^6.16.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-image-crop": "^11.0.10",
+    "sharp": "^0.34.5",
+    "tailwind-merge": "^3.4.0",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -31,6 +37,7 @@
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
