--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^6.16.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-image-crop": "^11.0.10",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
