--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-image-crop": "^11.0.10",
+    "replicate": "^1.4.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "yaml": "^2.8.2"
