--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "16.1.1",
     "openai": "^6.16.0",
     "react": "19.2.3",
@@ -33,6 +35,7 @@
     "yaml": "^2.8.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
