--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "next": "16.1.1",
+    "nodemailer": "^7.0.13",
     "openai": "^6.16.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-image-crop": "^11.0.10",
     "replicate": "^1.4.0",
+    "resend": "^6.9.1",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "yaml": "^2.8.2"
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
