--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "file-saver": "^2.0.5",
+    "form-data": "^4.0.5",
     "jszip": "^3.10.1",
     "next": "16.1.1",
     "nodemailer": "^7.0.13",
@@ -34,6 +35,7 @@
     "resend": "^6.9.1",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
+    "undici": "^7.20.0",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
