--- a/prompts/3.scenes_prompt.yaml
+++ b/prompts/3.scenes_prompt.yaml
@@ -42,7 +42,10 @@ user_prompt: |
   {
     "bookTitle": "<copy>",
     "bookCover": {
-      "imagePrompt": "<ENGLISH: a single, self-contained prompt for the book cover. MUST include the book title text to be displayed on the cover. Include style tags and all necessary details.>"
+      "imagePrompt": "<ENGLISH: a single, self-contained prompt for the FRONT book cover. MUST include the book title text to be displayed on the cover. Include style tags and all necessary details.>"
+    },
+    "backCover": {
+      "imagePrompt": "<ENGLISH: a single, self-contained prompt for the BACK cover. This should depict ONLY the environment/background from the front cover - remove ALL text, characters, and people. Keep the same setting, lighting, color palette, and atmosphere as the front cover, but show an empty scene without any characters or text. Include style tags.>"
     },
     "shortDescription": "<copy>",
     "motivationEnd": "<copy>",
@@ -78,7 +81,7 @@ user_prompt: |
   - **Self-contained**: No references like "as before", "previous scene", "same outfit", etc. – always write out **the exact current state**.
   - **Consistency**: if clothing/color/hairstyle changes, the new state becomes canon for subsequent scenes.
   - **Clarity**: no lists with 30+ tags; prefer 1-2 sentences for `imagePrompt`, rich in specifics.
-  - **No text in the image** (except for the book cover, which MUST include the book title).
+  - **No text in the image** (except for the FRONT book cover, which MUST include the book title). The back cover should have NO text.
   - **Originality**: do not mention protected IP.
 
   ### JSON Input (Required)
