update the notifications to get the book approve url and also use preview images service

--- a/emails/books-ready.yaml
+++ b/emails/books-ready.yaml
@@ -2,39 +2,75 @@
 # Email template for notifying customers when their books are ready for review
 
 # Subject line (different for single vs multiple books)
-# Placeholders: {{orderNumber}}, {{childNames}}
-subject_single: "[{{orderNumber}}] 📚 Вашата персонализирана книжка е готова за преглед"
-subject_multiple: "[{{orderNumber}}] 📚 Вашите персонализирани книжки са готови за преглед"
+# Placeholders: {{orderNumber}}, {{childName}}, {{childrenNames}}
+subject_single: "✨ {{childName}} е главният герой! Вижте персоналната книжка преди печат"
+subject_multiple: "✨ Книжките за {{childrenNames}} са готови за преглед!"
 
 # Email body (different for single vs multiple books)
-# Placeholders: {{customerName}}, {{orderNumber}}, {{childName}}, {{storyName}}, {{booksList}}
+# Placeholders: {{customerName}}, {{orderNumber}}, {{childName}}, {{storyName}}, {{booksList}}, {{childrenNames}}, {{approvalUrl}}
 body_single: |
-  Здравейте, {{customerName}}
+  Здравейте, {{customerName}}! 🌟
 
-  С радост ви изпращаме вашата персонализирана книжка в прикачения файл, за да я прегледате преди печат.
-  (Файлът е с намалено качество и воден знак)
+  Имаме вълнуващи новини – персонализираната книжка за {{childName}} е готова!
 
-  Книжката е създадена специално за {{childName}} – „{{storyName}}"
+  「{{storyName}}」
 
-  Моля, разгледайте внимателно и ни потвърдете, че всичко ви харесва, за да можем да преминем към изработка и печат.
+  Вложихме много любов и внимание, за да създадем тази уникална история, в която {{childName}} е истинският герой. Сега е моментът да я видите!
 
-  Благодарим ви, че творим тази специална история заедно с вас! 💛
+  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
-  Поздрави,
+  📖 КАКВО ДА НАПРАВИТЕ СЕГА:
+
+  1️⃣  Отворете линка по-долу
+  2️⃣  Разгледайте всяка страница от книжката на {{childName}}
+  3️⃣  Натиснете „Одобри и изпрати за печат" или „Откажи"
+
+  👉 ПРЕГЛЕД НА КНИЖКАТА: {{approvalUrl}}
+
+  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+  ⏰ Моля, прегледайте книжката в рамките на 48 часа, за да можем да я изпратим за печат възможно най-скоро.
+
+  💡 Малък съвет: Прегледайте заедно с {{childName}} – децата обичат да се виждат в собствената си история!
+
+  Ако имате въпроси, просто отговорете на този имейл – винаги сме насреща.
+
+  С топли пожелания и очакване на вашето одобрение,
   Екипът на Приказко БГ 📖✨
+
+  —
+  П.С. Не можем да се сдържим да споделим – {{childName}} изглежда невероятно в тази история! 💛
 
 body_multiple: |
-  Здравейте, {{customerName}}
+  Здравейте, {{customerName}}! 🌟
 
-  С радост ви изпращаме вашите персонализирани книжки в прикачения файл, за да ги прегледате преди печат.
-  (Файловете са с намалено качество и воден знак)
+  Имаме страхотни новини – персонализираните книжки за {{childrenNames}} са готови!
 
-  Книжките са създадени специално за:
+  📚 КНИЖКИ ЗА ВАШИТЕ МАЛЧУГАНИ:
   {{booksList}}
 
-  Моля, разгледайте внимателно и ни потвърдете, че всичко ви харесва, за да можем да преминем към изработка и печат.
+  Всяка история е създадена с много внимание и любов, за да превърне {{childrenNames}} в истински герои. Сега е моментът да ги видите!
 
-  Благодарим ви, че творим тези специални истории заедно с вас! 💛
+  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
-  Поздрави,
+  📖 КАКВО ДА НАПРАВИТЕ СЕГА:
+
+  1️⃣  Отворете линка по-долу
+  2️⃣  Разгледайте внимателно всяка книжка, страница по страница
+  3️⃣  Натиснете „Одобри и изпрати за печат" или „Откажи"
+
+  👉 ПРЕГЛЕД НА КНИЖКИТЕ: {{approvalUrl}}
+
+  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+  ⏰ Моля, прегледайте книжките в рамките на 48 часа, за да можем да ги изпратим за печат възможно най-скоро.
+
+  💡 Малък съвет: Прегледайте заедно с {{childrenNames}} – децата обичат да се виждат като главни герои в собствените си истории!
+
+  Ако имате въпроси, просто отговорете на този имейл – винаги сме насреща.
+
+  С топли пожелания и очакване на вашето одобрение,
   Екипът на Приказко БГ 📖✨
+
+  —
+  П.С. Едва чакаме да видите колко невероятно изглеждат {{childrenNames}} в техните истории! 💛
