--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:prod": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint",
+    "email:dev": "email dev --dir emails/templates --port 3001",
     "sync-images": "node scripts/sync-r2-to-minio.js",
     "sync-order-images": "node scripts/sync-order-images.js",
     "fetch-order": "tsx scripts/fetch-order.ts",
@@ -39,6 +40,8 @@
     "yaml": "^2.8.2"
   },
   "devDependencies": {
+    "@react-email/components": "^1.0.6",
+    "@react-email/preview-server": "^5.2.5",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
@@ -48,6 +51,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
+    "react-email": "^5.2.5",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
     "typescript": "^5"
