--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:worker": "tsx watch worker/index.ts",
+    "dev:pdf": "cd packages/pdf-create && npm run dev",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:worker\" \"npm run dev:pdf\"",
     "build": "mv .env.local .env.local.bak 2>/dev/null || true && NODE_ENV=production next build && mv .env.local.bak .env.local 2>/dev/null || true",
     "build:prod": "NODE_ENV=production next build",
+    "build:worker": "tsc -p tsconfig.worker.json",
     "start": "next start",
     "lint": "eslint",
     "email:dev": "email dev --dir emails/templates --port 3001",
     "sync-images": "node scripts/sync-r2-to-minio.js",
     "sync-order-images": "node scripts/sync-order-images.js",
     "fetch-order": "tsx scripts/fetch-order.ts",
-    "fetch-and-sync": "tsx scripts/fetch-and-sync-order.ts"
+    "fetch-and-sync": "tsx scripts/fetch-and-sync-order.ts",
+    "docker:up": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:down": "docker-compose -f docker-compose.prod.yml down",
+    "docker:logs": "docker-compose -f docker-compose.prod.yml logs -f",
+    "docker:build": "docker-compose -f docker-compose.prod.yml build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.970.0",
@@ -48,6 +56,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "postcss": "^8.5.6",
