--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -9,13 +9,11 @@ RUN npm ci
 # Copy source files
 COPY lib ./lib
 COPY worker ./worker
+COPY emails ./emails
 COPY tsconfig.worker.json ./
-
-# Build the worker
-RUN npm run build:worker
 
 # Create logs directory
 RUN mkdir -p webhook-logs
 
-# Start the worker
-CMD ["node", "dist/worker/index.js"]
+# Start the worker using tsx with the correct tsconfig
+CMD ["npx", "tsx", "--tsconfig", "tsconfig.worker.json", "worker/index.ts"]
