upload the final zip in r2

--- a/docker-compose.hostinger.yml
+++ b/docker-compose.hostinger.yml
@@ -38,6 +38,7 @@ services:
       - R2_BUCKET=${R2_BUCKET}
       - R2_GENERATIONS_BUCKET=${R2_GENERATIONS_BUCKET}
       - R2_PREVIEWS_BUCKET=${R2_PREVIEWS_BUCKET}
+      - R2_PRINTS_BUCKET=${R2_PRINTS_BUCKET}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - FAL_KEY=${FAL_KEY}
@@ -130,6 +131,7 @@ services:
       - R2_BUCKET=${R2_BUCKET}
       - R2_GENERATIONS_BUCKET=${R2_GENERATIONS_BUCKET}
       - R2_PREVIEWS_BUCKET=${R2_PREVIEWS_BUCKET}
+      - R2_PRINTS_BUCKET=${R2_PRINTS_BUCKET}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
       - WOOCOMMERCE_STORE_URL=${WOOCOMMERCE_STORE_URL}
       - APPROVAL_SECRET_KEY=${APPROVAL_SECRET_KEY}
