--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,7 @@ services:
       - R2_BUCKET=${R2_BUCKET}
       - R2_GENERATIONS_BUCKET=${R2_GENERATIONS_BUCKET}
       - R2_PREVIEWS_BUCKET=${R2_PREVIEWS_BUCKET}
+      - R2_PRINTS_BUCKET=${R2_PRINTS_BUCKET}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - FAL_KEY=${FAL_KEY}
@@ -127,6 +128,7 @@ services:
       - R2_BUCKET=${R2_BUCKET}
       - R2_GENERATIONS_BUCKET=${R2_GENERATIONS_BUCKET}
       - R2_PREVIEWS_BUCKET=${R2_PREVIEWS_BUCKET}
+      - R2_PRINTS_BUCKET=${R2_PRINTS_BUCKET}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
       - WOOCOMMERCE_STORE_URL=${WOOCOMMERCE_STORE_URL}
       - APPROVAL_SECRET_KEY=${APPROVAL_SECRET_KEY}
