--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,5 +1,8 @@
 FROM node:20-alpine
 
+# Install cron (dcron is the Alpine version)
+RUN apk add --no-cache dcron
+
 WORKDIR /app
 
 # Install dependencies
@@ -10,10 +13,25 @@ RUN npm ci
 COPY lib ./lib
 COPY worker ./worker
 COPY emails ./emails
+COPY scripts ./scripts
 COPY tsconfig.worker.json ./
 
 # Create logs directory
 RUN mkdir -p webhook-logs
 
-# Start the worker using tsx with the correct tsconfig
-CMD ["npx", "tsx", "--tsconfig", "tsconfig.worker.json", "worker/index.ts"]
+# Create cleanup script wrapper
+RUN echo '#!/bin/sh' > /app/cleanup-prints-cron.sh && \
+    echo 'cd /app && npx tsx scripts/cleanup-downloaded-prints.ts >> /var/log/cleanup-prints.log 2>&1' >> /app/cleanup-prints-cron.sh && \
+    chmod +x /app/cleanup-prints-cron.sh
+
+# Add cron job (runs daily at 3 AM)
+RUN echo "0 3 * * * /app/cleanup-prints-cron.sh" | crontab -
+
+# Create entrypoint that starts cron and worker
+RUN echo '#!/bin/sh' > /app/entrypoint.sh && \
+    echo 'crond' >> /app/entrypoint.sh && \
+    echo 'npx tsx --tsconfig tsconfig.worker.json worker/index.ts' >> /app/entrypoint.sh && \
+    chmod +x /app/entrypoint.sh
+
+# Start cron and worker
+CMD ["/app/entrypoint.sh"]
